<?xml version="1.0"?>
<package format="2">
  <name>octomap_world</name>
  <version>0.0.0</version>
  <description>
      A wrapper for Octomap, allowing insertions of pointclouds and disparity maps.
      Inherits from WorldBase in volumetric_map_base package.
  </description>

  <author email="helen.oleynikova@mavt.ethz.ch">Helen Oleynikova</author>
  <author email="markus.achtelik_devel@mavt.ethz.ch">Markus Achtelik</author>

  <maintainer email="reem.ashour@ku.ac.ae"> Reem Ashour</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>minkindr_conversions</depend>
  <depend>octomap</depend>
  <depend>octomap_msgs</depend>
  <depend>octomap_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>volumetric_map_base</depend>
  <depend>volumetric_msgs</depend>



<!--build_depend>minkindr_conversions</build_depend>
<build_depend>octomap</build_depend>
<build_depend>octomap_msgs</build_depend>
<build_depend>octomap_ros</build_depend>
<build_depend>pcl_conversions</build_depend>
<build_depend>pcl_ros</build_depend>
<build_depend>volumetric_map_base</build_depend>
<build_depend>volumetric_msgs</build_depend>

<build_export_depend>minkindr_conversions</build_export_depend>
<build_export_depend>octomap</build_export_depend>
<build_export_depend>octomap_msgs</build_export_depend>
<build_export_depend>octomap_ros</build_export_depend>
<build_export_depend>pcl_conversions</build_export_depend>
<build_export_depend>pcl_ros</build_export_depend>
<build_export_depend>volumetric_map_base</build_export_depend>
<build_export_depend>volumetric_msgs</build_export_depend>

<exec_depend>minkindr_conversions</exec_depend>
<exec_depend>octomap</exec_depend>
<exec_depend>octomap_msgs</exec_depend>
<exec_depend>octomap_ros</exec_depend>
<exec_depend>pcl_conversions</exec_depend>
<exec_depend>pcl_ros</exec_depend>
<exec_depend>volumetric_map_base</exec_depend>
<exec_depend>volumetric_msgs</exec_depend-->

</package>
